--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@splidejs/svelte-splide": "^0.2.9"
+		"@splidejs/svelte-splide": "^0.2.9",
+		"svelte-select": "^5.0.0-beta.40"
 	}
 }
