--- a/.svelte-kit/cloudflare/vite-manifest.json
+++ b/.svelte-kit/cloudflare/vite-manifest.json
@@ -3,53 +3,53 @@
     "file": "_app/immutable/assets/home-icon-bilgisayar-28e4a71a.svg",
     "src": "src/lib/images/category/home-icon-bilgisayar.svg"
   },
-  "src/lib/images/category/home-icon-dans.svg": {
-    "file": "_app/immutable/assets/home-icon-dans-620f1f4c.svg",
-    "src": "src/lib/images/category/home-icon-dans.svg"
-  },
   "src/lib/images/category/home-icon-direksiyon.svg": {
     "file": "_app/immutable/assets/home-icon-direksiyon-f6f5e8fc.svg",
     "src": "src/lib/images/category/home-icon-direksiyon.svg"
+  },
+  "src/lib/images/category/home-icon-dans.svg": {
+    "file": "_app/immutable/assets/home-icon-dans-620f1f4c.svg",
+    "src": "src/lib/images/category/home-icon-dans.svg"
   },
   "src/lib/images/student.png": {
     "file": "_app/immutable/assets/student-51aa6cee.png",
     "src": "src/lib/images/student.png"
   },
-  "src/lib/images/category/home-icon-kisiselgelisim.svg": {
-    "file": "_app/immutable/assets/home-icon-kisiselgelisim-66895feb.svg",
-    "src": "src/lib/images/category/home-icon-kisiselgelisim.svg"
-  },
   "src/lib/images/category/home-icon-ilkogretim.svg": {
     "file": "_app/immutable/assets/home-icon-ilkogretim-a3b45991.svg",
     "src": "src/lib/images/category/home-icon-ilkogretim.svg"
+  },
+  "src/lib/images/category/home-icon-kisiselgelisim.svg": {
+    "file": "_app/immutable/assets/home-icon-kisiselgelisim-66895feb.svg",
+    "src": "src/lib/images/category/home-icon-kisiselgelisim.svg"
   },
   "src/lib/images/category/home-icon-lise.svg": {
     "file": "_app/immutable/assets/home-icon-lise-864dc187.svg",
     "src": "src/lib/images/category/home-icon-lise.svg"
   },
-  "src/lib/images/category/home-icon-muzik.svg": {
-    "file": "_app/immutable/assets/home-icon-muzik-83b799a3.svg",
-    "src": "src/lib/images/category/home-icon-muzik.svg"
-  },
-  "src/lib/images/category/home-icon-oyunhobi.svg": {
-    "file": "_app/immutable/assets/home-icon-oyunhobi-8013de93.svg",
-    "src": "src/lib/images/category/home-icon-oyunhobi.svg"
+  "src/lib/images/category/home-icon-sanat.svg": {
+    "file": "_app/immutable/assets/home-icon-sanat-cbe89840.svg",
+    "src": "src/lib/images/category/home-icon-sanat.svg"
   },
   "src/lib/images/category/home-icon-ozelegitim.svg": {
     "file": "_app/immutable/assets/home-icon-ozelegitim-8658b55d.svg",
     "src": "src/lib/images/category/home-icon-ozelegitim.svg"
   },
-  "src/lib/images/category/home-icon-sanat.svg": {
-    "file": "_app/immutable/assets/home-icon-sanat-cbe89840.svg",
-    "src": "src/lib/images/category/home-icon-sanat.svg"
-  },
-  "src/lib/images/category/home-icon-sinavhazirlik.svg": {
-    "file": "_app/immutable/assets/home-icon-sinavhazirlik-df3b54b6.svg",
-    "src": "src/lib/images/category/home-icon-sinavhazirlik.svg"
+  "src/lib/images/category/home-icon-muzik.svg": {
+    "file": "_app/immutable/assets/home-icon-muzik-83b799a3.svg",
+    "src": "src/lib/images/category/home-icon-muzik.svg"
   },
   "src/lib/images/category/home-icon-spor.svg": {
     "file": "_app/immutable/assets/home-icon-spor-37bdddd9.svg",
     "src": "src/lib/images/category/home-icon-spor.svg"
+  },
+  "src/lib/images/category/home-icon-oyunhobi.svg": {
+    "file": "_app/immutable/assets/home-icon-oyunhobi-8013de93.svg",
+    "src": "src/lib/images/category/home-icon-oyunhobi.svg"
+  },
+  "src/lib/images/category/home-icon-sinavhazirlik.svg": {
+    "file": "_app/immutable/assets/home-icon-sinavhazirlik-df3b54b6.svg",
+    "src": "src/lib/images/category/home-icon-sinavhazirlik.svg"
   },
   "src/lib/images/category/home-icon-yabancidil.svg": {
     "file": "_app/immutable/assets/home-icon-yabancidil-7970e6d9.svg",
@@ -63,6 +63,14 @@
     "file": "_app/immutable/assets/netders-logo-blue-a79eee8d.svg",
     "src": "src/lib/images/netders-logo-blue.svg"
   },
+  "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2": {
+    "file": "_app/immutable/assets/fira-mono-latin-400-normal-e43b3538.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2"
+  },
+  "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2": {
+    "file": "_app/immutable/assets/fira-mono-latin-ext-400-normal-6bfabd30.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2"
+  },
   "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2": {
     "file": "_app/immutable/assets/fira-mono-cyrillic-400-normal-c7d433fd.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2"
@@ -71,17 +79,9 @@
     "file": "_app/immutable/assets/fira-mono-greek-400-normal-a8be01ce.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2"
   },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2": {
-    "file": "_app/immutable/assets/fira-mono-latin-400-normal-e43b3538.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2"
-  },
   "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2": {
     "file": "_app/immutable/assets/fira-mono-greek-ext-400-normal-9e2fe623.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2"
-  },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2": {
-    "file": "_app/immutable/assets/fira-mono-latin-ext-400-normal-6bfabd30.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2"
   },
   "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2": {
     "file": "_app/immutable/assets/fira-mono-cyrillic-ext-400-normal-3df7909e.woff2",
@@ -92,12 +92,12 @@
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-all-400-normal.woff"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-09fb4852.js",
+    "file": "_app/immutable/start-f994fa51.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-fd37714b.js",
-      "_singletons-3bd5cfbf.js",
+      "_singletons-fd2c8475.js",
       "_env-public-6aa99648.js"
     ],
     "dynamicImports": [
@@ -132,12 +132,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-adab7c9a.js",
+    "file": "_app/immutable/components/error.svelte-bcacfe50.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
       "_index-fd37714b.js",
-      "_singletons-3bd5cfbf.js"
+      "_singletons-fd2c8475.js"
     ]
   },
   "src/routes/+page.svelte": {
@@ -248,18 +248,17 @@
     ]
   },
   "src/routes/ozel-ders-ilanlari-verenler/[...catchall]/+page.js": {
-    "file": "_app/immutable/modules/pages/ozel-ders-ilanlari-verenler/_...catchall_/_page.js-d40bbbba.js",
+    "file": "_app/immutable/modules/pages/ozel-ders-ilanlari-verenler/_...catchall_/_page.js-ee932d21.js",
     "src": "src/routes/ozel-ders-ilanlari-verenler/[...catchall]/+page.js",
     "isEntry": true,
     "imports": [
       "_environment-b04a8a58.js",
       "_user-9a15f397.js",
-      "_index-fd37714b.js",
-      "__page-efbe1ed3.js"
+      "__page-4d05f28e.js"
     ]
   },
-  "_singletons-3bd5cfbf.js": {
-    "file": "_app/immutable/chunks/singletons-3bd5cfbf.js",
+  "_singletons-fd2c8475.js": {
+    "file": "_app/immutable/chunks/singletons-fd2c8475.js",
     "imports": [
       "_index-571ab9cb.js"
     ]
@@ -317,12 +316,11 @@
       "_environment-b04a8a58.js"
     ]
   },
-  "__page-efbe1ed3.js": {
-    "file": "_app/immutable/chunks/_page-efbe1ed3.js",
+  "__page-4d05f28e.js": {
+    "file": "_app/immutable/chunks/_page-4d05f28e.js",
     "imports": [
       "_environment-b04a8a58.js",
-      "_user-9a15f397.js",
-      "_index-fd37714b.js"
+      "_user-9a15f397.js"
     ]
   },
   ".svelte-kit/generated/nodes/0.js": {
@@ -334,7 +332,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-6a438fe9.js",
+    "file": "_app/immutable/chunks/1-8865cdc1.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -382,7 +380,7 @@
     "src": ".svelte-kit/generated/nodes/6.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-efbe1ed3.js",
+      "__page-4d05f28e.js",
       "src/routes/ozel-ders-ilanlari-verenler/[...catchall]/+page.svelte"
     ]
   },
