--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # Private
+VITE_TEMP_BASE_URL='https://netders-svelte.pages.dev/'
 VITE_BASE_URL='https://netders.com/'
 VITE_API_URL='https://api.netders.com/'
