search page prerender

--- a/.svelte-kit/cloudflare/vite-manifest.json
+++ b/.svelte-kit/cloudflare/vite-manifest.json
@@ -1,11 +1,11 @@
 {
-  "src/lib/images/category/home-icon-bilgisayar.svg": {
-    "file": "_app/immutable/assets/home-icon-bilgisayar-28e4a71a.svg",
-    "src": "src/lib/images/category/home-icon-bilgisayar.svg"
-  },
   "src/lib/images/category/home-icon-direksiyon.svg": {
     "file": "_app/immutable/assets/home-icon-direksiyon-f6f5e8fc.svg",
     "src": "src/lib/images/category/home-icon-direksiyon.svg"
+  },
+  "src/lib/images/category/home-icon-bilgisayar.svg": {
+    "file": "_app/immutable/assets/home-icon-bilgisayar-28e4a71a.svg",
+    "src": "src/lib/images/category/home-icon-bilgisayar.svg"
   },
   "src/lib/images/category/home-icon-dans.svg": {
     "file": "_app/immutable/assets/home-icon-dans-620f1f4c.svg",
@@ -15,49 +15,49 @@
     "file": "_app/immutable/assets/home-icon-kisiselgelisim-66895feb.svg",
     "src": "src/lib/images/category/home-icon-kisiselgelisim.svg"
   },
-  "src/lib/images/category/home-icon-lise.svg": {
-    "file": "_app/immutable/assets/home-icon-lise-864dc187.svg",
-    "src": "src/lib/images/category/home-icon-lise.svg"
-  },
   "src/lib/images/category/home-icon-ilkogretim.svg": {
     "file": "_app/immutable/assets/home-icon-ilkogretim-a3b45991.svg",
     "src": "src/lib/images/category/home-icon-ilkogretim.svg"
+  },
+  "src/lib/images/category/home-icon-lise.svg": {
+    "file": "_app/immutable/assets/home-icon-lise-864dc187.svg",
+    "src": "src/lib/images/category/home-icon-lise.svg"
   },
   "src/lib/images/category/home-icon-muzik.svg": {
     "file": "_app/immutable/assets/home-icon-muzik-83b799a3.svg",
     "src": "src/lib/images/category/home-icon-muzik.svg"
   },
-  "src/lib/images/category/home-icon-sanat.svg": {
-    "file": "_app/immutable/assets/home-icon-sanat-cbe89840.svg",
-    "src": "src/lib/images/category/home-icon-sanat.svg"
+  "src/lib/images/category/home-icon-oyunhobi.svg": {
+    "file": "_app/immutable/assets/home-icon-oyunhobi-8013de93.svg",
+    "src": "src/lib/images/category/home-icon-oyunhobi.svg"
   },
   "src/lib/images/category/home-icon-ozelegitim.svg": {
     "file": "_app/immutable/assets/home-icon-ozelegitim-8658b55d.svg",
     "src": "src/lib/images/category/home-icon-ozelegitim.svg"
   },
-  "src/lib/images/category/home-icon-oyunhobi.svg": {
-    "file": "_app/immutable/assets/home-icon-oyunhobi-8013de93.svg",
-    "src": "src/lib/images/category/home-icon-oyunhobi.svg"
-  },
-  "src/lib/images/category/home-icon-spor.svg": {
-    "file": "_app/immutable/assets/home-icon-spor-37bdddd9.svg",
-    "src": "src/lib/images/category/home-icon-spor.svg"
+  "src/lib/images/category/home-icon-sanat.svg": {
+    "file": "_app/immutable/assets/home-icon-sanat-cbe89840.svg",
+    "src": "src/lib/images/category/home-icon-sanat.svg"
   },
   "src/lib/images/category/home-icon-sinavhazirlik.svg": {
     "file": "_app/immutable/assets/home-icon-sinavhazirlik-df3b54b6.svg",
     "src": "src/lib/images/category/home-icon-sinavhazirlik.svg"
   },
+  "src/lib/images/category/home-icon-spor.svg": {
+    "file": "_app/immutable/assets/home-icon-spor-37bdddd9.svg",
+    "src": "src/lib/images/category/home-icon-spor.svg"
+  },
   "src/lib/images/category/home-icon-yabancidil.svg": {
     "file": "_app/immutable/assets/home-icon-yabancidil-7970e6d9.svg",
     "src": "src/lib/images/category/home-icon-yabancidil.svg"
   },
-  "src/lib/images/category/home-icon-universite.svg": {
-    "file": "_app/immutable/assets/home-icon-universite-c1622639.svg",
-    "src": "src/lib/images/category/home-icon-universite.svg"
-  },
   "src/lib/images/student.png": {
     "file": "_app/immutable/assets/student-51aa6cee.png",
     "src": "src/lib/images/student.png"
+  },
+  "src/lib/images/category/home-icon-universite.svg": {
+    "file": "_app/immutable/assets/home-icon-universite-c1622639.svg",
+    "src": "src/lib/images/category/home-icon-universite.svg"
   },
   "src/lib/images/netders-logo-blue.svg": {
     "file": "_app/immutable/assets/netders-logo-blue-a79eee8d.svg",
@@ -67,37 +67,37 @@
     "file": "_app/immutable/assets/fira-mono-latin-ext-400-normal-6bfabd30.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2"
   },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2": {
-    "file": "_app/immutable/assets/fira-mono-greek-ext-400-normal-9e2fe623.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2"
+  "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2": {
+    "file": "_app/immutable/assets/fira-mono-latin-400-normal-e43b3538.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2"
   },
   "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2": {
     "file": "_app/immutable/assets/fira-mono-cyrillic-ext-400-normal-3df7909e.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2"
   },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2": {
-    "file": "_app/immutable/assets/fira-mono-greek-400-normal-a8be01ce.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2"
-  },
   "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2": {
     "file": "_app/immutable/assets/fira-mono-cyrillic-400-normal-c7d433fd.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2"
   },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2": {
-    "file": "_app/immutable/assets/fira-mono-latin-400-normal-e43b3538.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2"
+  "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2": {
+    "file": "_app/immutable/assets/fira-mono-greek-400-normal-a8be01ce.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2"
+  },
+  "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2": {
+    "file": "_app/immutable/assets/fira-mono-greek-ext-400-normal-9e2fe623.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2"
   },
   "node_modules/@fontsource/fira-mono/files/fira-mono-all-400-normal.woff": {
     "file": "_app/immutable/assets/fira-mono-all-400-normal-1e3b098c.woff",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-all-400-normal.woff"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-119750a9.js",
+    "file": "_app/immutable/start-d923a797.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-f9612323.js",
-      "_singletons-d078c0f2.js"
+      "_singletons-fb5bda53.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
@@ -131,22 +131,22 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-5fad54df.js",
+    "file": "_app/immutable/components/error.svelte-fb543ba0.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
       "_index-f9612323.js",
-      "_stores-0198622e.js"
+      "_stores-93b223ec.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-e5d49cf5.js",
+    "file": "_app/immutable/components/pages/_page.svelte-ddd54ed6.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
       "_index-f9612323.js",
       "_user-7d0aa0fc.js",
-      "_navigation-7a28343a.js"
+      "_navigation-47e78651.js"
     ],
     "css": [
       "_app/immutable/assets/_page-b12f98c2.css"
@@ -197,15 +197,15 @@
     ]
   },
   "src/routes/ozel-ders-ilanlari-verenler/[...catchall]/+page.svelte": {
-    "file": "_app/immutable/components/pages/ozel-ders-ilanlari-verenler/_...catchall_/_page.svelte-7e2c79d5.js",
+    "file": "_app/immutable/components/pages/ozel-ders-ilanlari-verenler/_...catchall_/_page.svelte-0b284bd2.js",
     "src": "src/routes/ozel-ders-ilanlari-verenler/[...catchall]/+page.svelte",
     "isEntry": true,
     "imports": [
       "_index-f9612323.js",
       "_user-7d0aa0fc.js",
       "_index-b3592fb7.js",
-      "_stores-0198622e.js",
-      "_navigation-7a28343a.js"
+      "_stores-93b223ec.js",
+      "_navigation-47e78651.js"
     ],
     "css": [
       "_app/immutable/assets/_page-7e1b958a.css"
@@ -248,16 +248,17 @@
     ]
   },
   "src/routes/ozel-ders-ilanlari-verenler/[...catchall]/+page.js": {
-    "file": "_app/immutable/modules/pages/ozel-ders-ilanlari-verenler/_...catchall_/_page.js-6aaf3498.js",
+    "file": "_app/immutable/modules/pages/ozel-ders-ilanlari-verenler/_...catchall_/_page.js-bbe94177.js",
     "src": "src/routes/ozel-ders-ilanlari-verenler/[...catchall]/+page.js",
     "isEntry": true,
     "imports": [
+      "_environment-b04a8a58.js",
       "_user-7d0aa0fc.js",
-      "__page-1413841f.js"
+      "__page-2be2cfe9.js"
     ]
   },
-  "_singletons-d078c0f2.js": {
-    "file": "_app/immutable/chunks/singletons-d078c0f2.js",
+  "_singletons-fb5bda53.js": {
+    "file": "_app/immutable/chunks/singletons-fb5bda53.js",
     "imports": [
       "_index-b3592fb7.js"
     ]
@@ -271,11 +272,11 @@
       "_index-f9612323.js"
     ]
   },
-  "_stores-0198622e.js": {
-    "file": "_app/immutable/chunks/stores-0198622e.js",
+  "_stores-93b223ec.js": {
+    "file": "_app/immutable/chunks/stores-93b223ec.js",
     "imports": [
       "_index-f9612323.js",
-      "_singletons-d078c0f2.js"
+      "_singletons-fb5bda53.js"
     ]
   },
   "_user-7d0aa0fc.js": {
@@ -285,10 +286,10 @@
       "_index-b3592fb7.js"
     ]
   },
-  "_navigation-7a28343a.js": {
-    "file": "_app/immutable/chunks/navigation-7a28343a.js",
+  "_navigation-47e78651.js": {
+    "file": "_app/immutable/chunks/navigation-47e78651.js",
     "imports": [
-      "_singletons-d078c0f2.js"
+      "_singletons-fb5bda53.js"
     ]
   },
   "__page-0df15927.js": {
@@ -316,9 +317,10 @@
       "_environment-b04a8a58.js"
     ]
   },
-  "__page-1413841f.js": {
-    "file": "_app/immutable/chunks/_page-1413841f.js",
+  "__page-2be2cfe9.js": {
+    "file": "_app/immutable/chunks/_page-2be2cfe9.js",
     "imports": [
+      "_environment-b04a8a58.js",
       "_user-7d0aa0fc.js"
     ]
   },
@@ -331,7 +333,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-d1977034.js",
+    "file": "_app/immutable/chunks/1-28c095d4.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -339,7 +341,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-4417a2bb.js",
+    "file": "_app/immutable/chunks/2-9fd23f6d.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
@@ -375,21 +377,21 @@
     ]
   },
   ".svelte-kit/generated/nodes/6.js": {
-    "file": "_app/immutable/chunks/6-a98d56b5.js",
+    "file": "_app/immutable/chunks/6-a48df62f.js",
     "src": ".svelte-kit/generated/nodes/6.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-1413841f.js",
+      "__page-2be2cfe9.js",
       "src/routes/ozel-ders-ilanlari-verenler/[...catchall]/+page.svelte"
     ]
-  },
-  "src/routes/ozel-ders-ilanlari-verenler/[...catchall]/+page.css": {
-    "file": "_app/immutable/assets/_page-7e1b958a.css",
-    "src": "src/routes/ozel-ders-ilanlari-verenler/[...catchall]/+page.css"
   },
   "src/routes/detail/+page.css": {
     "file": "_app/immutable/assets/_page-1d121e74.css",
     "src": "src/routes/detail/+page.css"
+  },
+  "src/routes/ozel-ders-ilanlari-verenler/[...catchall]/+page.css": {
+    "file": "_app/immutable/assets/_page-7e1b958a.css",
+    "src": "src/routes/ozel-ders-ilanlari-verenler/[...catchall]/+page.css"
   },
   "src/routes/+page.css": {
     "file": "_app/immutable/assets/_page-b12f98c2.css",
