--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"svelte": "^3.46.0",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.8",
-		"vite": "^3.1.0"
+		"vite": "^3.1.0",
+		"vite-imagetools": "^4.0.11"
 	},
 	"type": "module",
 	"dependencies": {
