--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"flowbite-svelte": "^0.27.8",
 		"postcss": "^8.4.18",
 		"svelte": "^3.46.0",
+		"svelte-clipboard": "^1.0.0",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.8",
 		"vite": "^3.1.0",
@@ -27,6 +28,8 @@
 	"type": "module",
 	"dependencies": {
 		"@splidejs/svelte-splide": "^0.2.9",
-		"svelte-select": "^5.0.0-beta.40"
+		"dayjs": "^1.11.6",
+		"svelte-select": "^5.0.0-beta.40",
+		"toastify-js": "^1.12.0"
 	}
 }
