--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"svelte": "^3.46.0",
 		"svelte-clipboard": "^1.0.0",
 		"svelte-preprocess": "^4.10.7",
+		"svelte-range-slider-pips": "^2.1.0",
 		"tailwindcss": "^3.1.8",
 		"vite": "^3.1.0",
 		"vite-imagetools": "^4.0.11"
