--- a/.svelte-kit/cloudflare/vite-manifest.json
+++ b/.svelte-kit/cloudflare/vite-manifest.json
@@ -11,25 +11,25 @@
     "file": "_app/immutable/assets/bye-688e24e7.png",
     "src": "src/lib/images/bye.png"
   },
-  "src/lib/images/login-screen.png": {
-    "file": "_app/immutable/assets/login-screen-14c430ce.png",
-    "src": "src/lib/images/login-screen.png"
-  },
   "src/lib/images/student2.png": {
     "file": "_app/immutable/assets/student2-ef62a23a.png",
     "src": "src/lib/images/student2.png"
+  },
+  "src/lib/images/login-screen.png": {
+    "file": "_app/immutable/assets/login-screen-14c430ce.png",
+    "src": "src/lib/images/login-screen.png"
   },
   "src/lib/images/emotion-3.svg": {
     "file": "_app/immutable/assets/emotion-3-efb3156f.svg",
     "src": "src/lib/images/emotion-3.svg"
   },
-  "src/lib/images/emotion-2.svg": {
-    "file": "_app/immutable/assets/emotion-2-c456d9cd.svg",
-    "src": "src/lib/images/emotion-2.svg"
-  },
   "src/lib/images/emotion-1.svg": {
     "file": "_app/immutable/assets/emotion-1-89aceced.svg",
     "src": "src/lib/images/emotion-1.svg"
+  },
+  "src/lib/images/emotion-2.svg": {
+    "file": "_app/immutable/assets/emotion-2-c456d9cd.svg",
+    "src": "src/lib/images/emotion-2.svg"
   },
   "src/lib/images/emotion-5.svg": {
     "file": "_app/immutable/assets/emotion-5-161ebb4a.svg",
@@ -39,41 +39,41 @@
     "file": "_app/immutable/assets/emotion-4-45daf971.svg",
     "src": "src/lib/images/emotion-4.svg"
   },
-  "src/lib/images/icon-male.png": {
-    "file": "_app/immutable/assets/icon-male-8eb5c734.png",
-    "src": "src/lib/images/icon-male.png"
-  },
   "src/lib/images/icon-user.png": {
     "file": "_app/immutable/assets/icon-user-ca86099d.png",
     "src": "src/lib/images/icon-user.png"
+  },
+  "src/lib/images/icon-male.png": {
+    "file": "_app/immutable/assets/icon-male-8eb5c734.png",
+    "src": "src/lib/images/icon-male.png"
   },
   "src/lib/images/icon-female.png": {
     "file": "_app/immutable/assets/icon-female-c8d323ea.png",
     "src": "src/lib/images/icon-female.png"
   },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2": {
-    "file": "_app/immutable/assets/fira-mono-cyrillic-400-normal-c7d433fd.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2"
-  },
   "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2": {
     "file": "_app/immutable/assets/fira-mono-cyrillic-ext-400-normal-3df7909e.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2"
   },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2": {
-    "file": "_app/immutable/assets/fira-mono-latin-ext-400-normal-6bfabd30.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2"
+  "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2": {
+    "file": "_app/immutable/assets/fira-mono-cyrillic-400-normal-c7d433fd.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2"
   },
   "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2": {
     "file": "_app/immutable/assets/fira-mono-greek-ext-400-normal-9e2fe623.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2"
   },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2": {
-    "file": "_app/immutable/assets/fira-mono-greek-400-normal-a8be01ce.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2"
-  },
   "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2": {
     "file": "_app/immutable/assets/fira-mono-latin-400-normal-e43b3538.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2"
+  },
+  "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2": {
+    "file": "_app/immutable/assets/fira-mono-latin-ext-400-normal-6bfabd30.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2"
+  },
+  "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2": {
+    "file": "_app/immutable/assets/fira-mono-greek-400-normal-a8be01ce.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2"
   },
   "node_modules/@fontsource/fira-mono/files/fira-mono-all-400-normal.woff": {
     "file": "_app/immutable/assets/fira-mono-all-400-normal-1e3b098c.woff",
@@ -87,10 +87,6 @@
     "file": "_app/immutable/assets/home-icon-bilgisayar-28e4a71a.svg",
     "src": "src/lib/images/category/home-icon-bilgisayar.svg"
   },
-  "src/lib/images/category/home-icon-direksiyon.svg": {
-    "file": "_app/immutable/assets/home-icon-direksiyon-f6f5e8fc.svg",
-    "src": "src/lib/images/category/home-icon-direksiyon.svg"
-  },
   "src/lib/images/category/home-icon-kisiselgelisim.svg": {
     "file": "_app/immutable/assets/home-icon-kisiselgelisim-66895feb.svg",
     "src": "src/lib/images/category/home-icon-kisiselgelisim.svg"
@@ -99,13 +95,17 @@
     "file": "_app/immutable/assets/home-icon-dans-620f1f4c.svg",
     "src": "src/lib/images/category/home-icon-dans.svg"
   },
+  "src/lib/images/category/home-icon-direksiyon.svg": {
+    "file": "_app/immutable/assets/home-icon-direksiyon-f6f5e8fc.svg",
+    "src": "src/lib/images/category/home-icon-direksiyon.svg"
+  },
+  "src/lib/images/category/home-icon-ilkogretim.svg": {
+    "file": "_app/immutable/assets/home-icon-ilkogretim-a3b45991.svg",
+    "src": "src/lib/images/category/home-icon-ilkogretim.svg"
+  },
   "src/lib/images/category/home-icon-muzik.svg": {
     "file": "_app/immutable/assets/home-icon-muzik-83b799a3.svg",
     "src": "src/lib/images/category/home-icon-muzik.svg"
-  },
-  "src/lib/images/category/home-icon-ozelegitim.svg": {
-    "file": "_app/immutable/assets/home-icon-ozelegitim-8658b55d.svg",
-    "src": "src/lib/images/category/home-icon-ozelegitim.svg"
   },
   "src/lib/images/category/home-icon-lise.svg": {
     "file": "_app/immutable/assets/home-icon-lise-864dc187.svg",
@@ -115,9 +115,9 @@
     "file": "_app/immutable/assets/home-icon-oyunhobi-8013de93.svg",
     "src": "src/lib/images/category/home-icon-oyunhobi.svg"
   },
-  "src/lib/images/category/home-icon-sinavhazirlik.svg": {
-    "file": "_app/immutable/assets/home-icon-sinavhazirlik-df3b54b6.svg",
-    "src": "src/lib/images/category/home-icon-sinavhazirlik.svg"
+  "src/lib/images/category/home-icon-ozelegitim.svg": {
+    "file": "_app/immutable/assets/home-icon-ozelegitim-8658b55d.svg",
+    "src": "src/lib/images/category/home-icon-ozelegitim.svg"
   },
   "src/lib/images/category/home-icon-sanat.svg": {
     "file": "_app/immutable/assets/home-icon-sanat-cbe89840.svg",
@@ -127,9 +127,9 @@
     "file": "_app/immutable/assets/home-icon-spor-37bdddd9.svg",
     "src": "src/lib/images/category/home-icon-spor.svg"
   },
-  "src/lib/images/category/home-icon-ilkogretim.svg": {
-    "file": "_app/immutable/assets/home-icon-ilkogretim-a3b45991.svg",
-    "src": "src/lib/images/category/home-icon-ilkogretim.svg"
+  "src/lib/images/category/home-icon-sinavhazirlik.svg": {
+    "file": "_app/immutable/assets/home-icon-sinavhazirlik-df3b54b6.svg",
+    "src": "src/lib/images/category/home-icon-sinavhazirlik.svg"
   },
   "src/lib/images/category/home-icon-yabancidil.svg": {
     "file": "_app/immutable/assets/home-icon-yabancidil-7970e6d9.svg",
@@ -144,7 +144,7 @@
     "src": "student.webp"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-22cddce8.js",
+    "file": "_app/immutable/start-2de75191.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
@@ -446,33 +446,33 @@
     ]
   },
   "src/routes/(app)/member/about/+page.js": {
-    "file": "_app/immutable/modules/pages/(app)/member/about/_page.js-478f13a7.js",
+    "file": "_app/immutable/modules/pages/(app)/member/about/_page.js-6215ebd0.js",
     "src": "src/routes/(app)/member/about/+page.js",
     "isEntry": true,
     "imports": [
       "_index-ae603ba0.js",
-      "_index-249ed9df.js",
-      "__page-9223843d.js"
+      "_userStore-62a8c3c2.js",
+      "__page-6e407281.js"
     ]
   },
   "src/routes/(app)/member/account/+page.js": {
-    "file": "_app/immutable/modules/pages/(app)/member/account/_page.js-51a45a91.js",
+    "file": "_app/immutable/modules/pages/(app)/member/account/_page.js-f3a9eb27.js",
     "src": "src/routes/(app)/member/account/+page.js",
     "isEntry": true,
     "imports": [
       "_index-ae603ba0.js",
-      "_index-249ed9df.js",
-      "__page-58ddfafd.js"
+      "_userStore-62a8c3c2.js",
+      "__page-7026ff3d.js"
     ]
   },
   "src/routes/(app)/member/requests/+page.js": {
-    "file": "_app/immutable/modules/pages/(app)/member/requests/_page.js-223d7214.js",
+    "file": "_app/immutable/modules/pages/(app)/member/requests/_page.js-5205c20e.js",
     "src": "src/routes/(app)/member/requests/+page.js",
     "isEntry": true,
     "imports": [
       "_index-ae603ba0.js",
-      "_index-249ed9df.js",
-      "__page-95c564cc.js"
+      "_userStore-62a8c3c2.js",
+      "__page-a2110d4e.js"
     ]
   },
   "src/routes/(app)/ozel-ders-ilanlari-verenler/[...catchall]/+page.js": {
@@ -692,11 +692,11 @@
       "_stores-726c4885.js"
     ]
   },
-  "__page-9223843d.js": {
-    "file": "_app/immutable/chunks/_page-9223843d.js",
+  "__page-6e407281.js": {
+    "file": "_app/immutable/chunks/_page-6e407281.js",
     "imports": [
       "_index-ae603ba0.js",
-      "_index-249ed9df.js"
+      "_userStore-62a8c3c2.js"
     ]
   },
   "_location-f5eedbd8.js": {
@@ -707,18 +707,18 @@
       "_responseService-33ffd84f.js"
     ]
   },
-  "__page-58ddfafd.js": {
-    "file": "_app/immutable/chunks/_page-58ddfafd.js",
+  "__page-7026ff3d.js": {
+    "file": "_app/immutable/chunks/_page-7026ff3d.js",
     "imports": [
       "_index-ae603ba0.js",
-      "_index-249ed9df.js"
+      "_userStore-62a8c3c2.js"
     ]
   },
-  "__page-95c564cc.js": {
-    "file": "_app/immutable/chunks/_page-95c564cc.js",
+  "__page-a2110d4e.js": {
+    "file": "_app/immutable/chunks/_page-a2110d4e.js",
     "imports": [
       "_index-ae603ba0.js",
-      "_index-249ed9df.js"
+      "_userStore-62a8c3c2.js"
     ]
   },
   "_lesson-4a01a36d.js": {
@@ -830,29 +830,29 @@
     ]
   },
   ".svelte-kit/generated/nodes/7.js": {
-    "file": "_app/immutable/chunks/7-08df64f5.js",
+    "file": "_app/immutable/chunks/7-1a9516fb.js",
     "src": ".svelte-kit/generated/nodes/7.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-9223843d.js",
+      "__page-6e407281.js",
       "src/routes/(app)/member/about/+page.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/8.js": {
-    "file": "_app/immutable/chunks/8-310cf168.js",
+    "file": "_app/immutable/chunks/8-c5e47728.js",
     "src": ".svelte-kit/generated/nodes/8.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-58ddfafd.js",
+      "__page-7026ff3d.js",
       "src/routes/(app)/member/account/+page.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/9.js": {
-    "file": "_app/immutable/chunks/9-48b76664.js",
+    "file": "_app/immutable/chunks/9-f19864de.js",
     "src": ".svelte-kit/generated/nodes/9.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-95c564cc.js",
+      "__page-a2110d4e.js",
       "src/routes/(app)/member/requests/+page.svelte"
     ]
   },
@@ -918,10 +918,6 @@
       "src/routes/(auth)/auth/logout/+page.svelte"
     ]
   },
-  "src/routes/(app)/+layout.css": {
-    "file": "_app/immutable/assets/_layout-a95766cb.css",
-    "src": "src/routes/(app)/+layout.css"
-  },
   "src/routes/(auth)/+layout.css": {
     "file": "_app/immutable/assets/_layout-a715ccf6.css",
     "src": "src/routes/(auth)/+layout.css"
@@ -929,6 +925,10 @@
   "src/routes/+page.css": {
     "file": "_app/immutable/assets/_page-12598ed9.css",
     "src": "src/routes/+page.css"
+  },
+  "src/routes/(app)/+layout.css": {
+    "file": "_app/immutable/assets/_layout-a95766cb.css",
+    "src": "src/routes/(app)/+layout.css"
   },
   "relativeTime.css": {
     "file": "_app/immutable/assets/relativeTime-8be3e30f.css",
