--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # Private
 VITE_BASE_URL='https://netders.com'
 VITE_API_URL='https://api.netders.com'
+VITE_CDN_URL='http://d1ql1h7f6x0zr6.cloudfront.net'
