--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@imask/svelte": "^6.4.3",
 		"@splidejs/svelte-splide": "^0.2.9",
 		"dayjs": "^1.11.6",
+		"imask": "^6.4.3",
 		"svelte-select": "^4.4.7",
-		"toastify-js": "^1.12.0"
+		"toastify-js": "^1.12.0",
+		"vest": "^4.6.8"
 	}
 }
