--- a/package.json
+++ b/package.json
@@ -13,22 +13,23 @@
 		"@popperjs/core": "^2.11.6",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-cloudflare": "^1.0.0-next.39",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.8.3",
 		"autoprefixer": "^10.4.12",
 		"classnames": "^2.3.2",
 		"flowbite": "^1.5.3",
 		"flowbite-svelte": "^0.27.8",
 		"postcss": "^8.4.18",
-		"svelte": "^3.46.0",
+		"svelte": "^3.54.0",
 		"svelte-clipboard": "^1.0.0",
 		"svelte-preprocess": "^4.10.7",
 		"svelte-range-slider-pips": "^2.1.0",
 		"tailwindcss": "^3.1.8",
-		"vite": "^3.1.0",
+		"vite": "^4.0.0",
 		"vite-imagetools": "^4.0.11"
 	},
 	"type": "module",
 	"dependencies": {
+		"@builder.io/partytown": "^0.7.5",
 		"@imask/svelte": "^6.4.3",
 		"@splidejs/svelte-splide": "^0.2.9",
 		"dayjs": "^1.11.6",
