--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Private
 VITE_BASE_URL='https://netders.com'
 VITE_API_URL='https://api.netders.com'
-VITE_CDN_URL='https://d3kpc4dliaf7f3.cloudfront.net/'
+VITE_CDN_URL='https://cdn.netders.com/'
